footer name change

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: http://dhwlm.github.io
 
 # Owner/author information
 owner:
-  name:           Dhawal M
+  name:           Dhawal Mehta
   avatar:         avatar.jpg
   bio:            "Dhawal Mehta is an experienced User Interface Designer & Developer with a demonstrated history of working in the internet industry."
   email:          dhawalmehta91@gmail.com
