--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: http://dhwlm.github.io
 # Owner/author information
 owner:
   name:           Dhawal Mehta
-  avatar:         avatar.jpg
+  avatar:         dhawalmehta.jpg
   bio:            "Dhawal Mehta is an experienced User Interface Designer & Developer with a demonstrated history of working in the internet industry."
   email:          dhawalmehta91@gmail.com
   # Social networking links used in footer. Update and remove as you like.
