--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Dhawal Mehta's Blog
 description:      A Blog
-disqus_shortname: dhawalmehtablog.disqus.com
+disqus_shortname: dhawalmehtablog
 reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: https://mmistakes.github.io, http://yourdomain.com, etc)
