desc update global

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            Dhawal Mehta's Blog
-description:      A Blog
+description:      Hello, My name is Dhawal Mehta. I'm a UI/UX Developer & a Web/Tech Enthusiast. I transform thoughts, concepts & ideas into well thought out cross-browser compatible design specs in exchange for Green stuff. :P
 disqus_shortname: dhawalmehtablog
 reading_time:     true
 words_per_minute: 200
